# optymalizacja

./: .clang-format  .gitignore  CMakeLists.txt  README.md  defaults.pri  optymalizacja.pro
app/: app.pro  main.cpp
res/: res.qrc
src/: BranchAndBound.cpp  BranchAndBound.hpp  BranchAndBoundSolver.cpp  BranchAndBoundSolver.hpp  BranchAndBoundTreeDisplayer.cpp  BranchAndBoundTreeDisplayer.hpp  BranchAndBoundTreeViewer.cpp  BranchAndBoundTreeViewer.hpp  BranchAndBoundTreeViewer.ui  CMakeLists.txt  ComparisonOperator.hpp  Controler.cpp  Controler.hpp  Dummy.cpp  Dummy.hpp  Equation.cpp  Equation.hpp  EquationConventer.cpp  EquationConventer.hpp  EquationManager.cpp  EquationManager.hpp  EquationValidator.cpp  EquationValidator.hpp  IEquation.hpp  IEquationConventer.hpp  IEquationManager.hpp  ISingleExpresionConventer.hpp  ITermConverter.hpp  LinProg.cpp  LinProg.hpp  LinearProblem.cpp  LinearProblem.hpp  LinearProblemCase.hpp  LinearProblemSolution.cpp  LinearProblemSolution.hpp  MainWindow.cpp  MainWindow.hpp  NodeOfSolution.cpp  NodeOfSolution.hpp  Simplex.cpp  (+24 more)
tests/: BranchAndBoundSolverTestSuite.cpp  CMakeLists.txt  DummyTestSuite.cpp  EquationConventerTestSuite.cpp  EquationManagerTestSuite.cpp  EquationTestSuite.cpp  SimplexSolverTestSuite.cpp  SimplexTableTestSuite.cpp  SimplexTestSuite.cpp  SingleExpresionConventerTestSuite.cpp  TermConverterTestSuite.cpp  main.cpp  tests.pro
tests/mocks/: EquationConventerMock.hpp  EquationManagerMock.hpp  EquationMock.hpp  SingleExpresionConventerMock.hpp  TermConverterMock.hpp
